--- a/pages/index.css
+++ b/pages/index.css
@@ -6,6 +6,7 @@
 @import url(../blocks/card.css);
 @import url(../blocks/recipes.css);
 @import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
 @import url(../blocks/about.css);
 @import url(../blocks/footer.css);
 
