--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,9 +1,23 @@
+@keyframes pulsate {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    transform: scale (1.3);
+    opacity: 0;
+  }
+}
+
 .about {
   background-color: #0a2850;
   color: #fff;
   display: flex;
   justify-content: space-between;
   overflow: hidden;
+  position: relative;
 }
 
 .about__title {
@@ -31,10 +45,15 @@
 
 .about__circle {
   background-color: #2f80ed;
-  width: 495px;
-  height: 495px;
+  width: 420px;
+  height: 420px;
   border-radius: 50%;
   position: absolute;
   left: -129px;
+  top: -152px;
   z-index: 2;
+}
+
+.about__circle_animation_blurred {
+  animation: pulsate 1.3s ease-in-out infinite;
 }
