--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -27,6 +27,10 @@
   line-height: 30px;
 }
 
+.recipes__iframe {
+  border: none;
+}
+
 .recipes__videos {
   display: flex;
   justify-content: center;
