--- a/blocks/header.css
+++ b/blocks/header.css
@@ -11,7 +11,7 @@
 }
 
 .header__description {
-  margin: 0 0 200px 80px;
+  margin: 0 0 0 80px;
   font-family: "Noto Serif", "Times New Roman" serif;
   font-size: 20px;
   line-height: 30px;
@@ -30,6 +30,7 @@
   font-weight: 500;
   font-size: 60px;
   line-height: 72px;
+  margin-bottom: 28px;
 }
 
 .header__image {
@@ -45,6 +46,7 @@
   display: flex;
   justify-content: space-between;
   align-items: end;
+  margin-top: 200px;
 }
 
 .header__paragraph-hours {
