--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,14 +1,12 @@
 @keyframes pulsate {
   0% {
-    transform: scale(1);
     opacity: 0;
   }
   50% {
-    transform: scale(1.3);
     opacity: 0.6;
   }
   100% {
-    transform: scale(1);
+    transform: scale(1.3);
     opacity: 0;
   }
 }
@@ -35,7 +33,7 @@
 
 .about__content {
   width: 650px;
-  font-family: "Noto Serif", "Times New Roman" serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
   margin: 119px 80px 173px 0;
@@ -43,6 +41,10 @@
 
 .about__paragraph {
   margin: 0 0 32px 0;
+}
+
+.about__paragraph:nth-last-of-type(1) {
+  margin: 0;
 }
 
 .about__circle {
