--- a/blocks/form.css
+++ b/blocks/form.css
@@ -17,8 +17,9 @@
   margin: 0;
   padding: 0;
   margin-bottom: 32px;
-  width: 100%;
+  width: 385px;
   height: 45px;
+  border-color: #838383;
 }
 
 .form__input::placeholder {
@@ -33,6 +34,7 @@
 
 .form__button {
   border-radius: 4px;
+  border: none;
   opacity: 100%;
   transition: opacity 1s linear;
   display: block;
@@ -42,7 +44,6 @@
   background-color: #2f80ed;
   width: 385px;
   height: 45px;
-  border: none;
   font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -62,8 +63,8 @@
   border-radius: 2px;
   margin-bottom: 120px;
   margin-top: 32px;
-  width: 8px;
-  height: 8px;
+  width: 18px;
+  height: 18px;
 }
 
 .form__label-checkbox {
