--- a/blocks/header.css
+++ b/blocks/header.css
@@ -4,33 +4,38 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  position: relative;
+  min-height: 800px;
+  max-height: 820px;
 }
 
 .header__title {
   margin: 0 0 28px 80px;
-}
-
-.header__description {
-  margin: 0 0 0 80px;
-  font-family: "Noto Serif", "Times New Roman" serif;
-  font-size: 20px;
-  line-height: 30px;
+  position: relative;
+  z-index: 2;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
 }
 
 .header__span-accent {
-  font-family: "Noto Serif", "Times New Roman" serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
   font-size: 60px;
   line-height: 72px;
   color: #2f80ed;
+  display: block;
+  margin-bottom: 10px;
 }
 
-.header__span-linebreak {
-  display: block;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  margin-bottom: 28px;
+.header__description {
+  margin: 0 0 0 80px;
+  position: relative;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
+  z-index: 2;
+  width: 680px;
 }
 
 .header__image {
@@ -39,24 +44,25 @@
   position: absolute;
   top: 124px;
   right: 5px;
+  z-index: 1;
 }
 
 .header__paragraph {
   font-weight: 500;
-  display: flex;
-  justify-content: space-between;
-  align-items: end;
-  margin-top: 200px;
+  position: relative;
 }
 
-.header__paragraph-hours {
-  margin: 0 0 40px 80px;
+.header__paragraph_type_hours {
+  list-style: none;
+  position: absolute;
+  left: 80px;
+  bottom: 40px;
+  margin: 0;
+  padding: 0;
 }
 
-.header__paragraph-hours-line {
-  display: block;
-}
-
-.header__paragraph-address {
-  margin: 0 80px 40px 0;
+.header__paragraph_type_address {
+  position: absolute;
+  right: 80px;
+  bottom: 40px;
 }
