--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -7,8 +7,9 @@
   display: flex;
   justify-content: flex-end;
   column-gap: 20px;
-  padding-top: 30px;
-  padding-right: 80px;
+  list-style: none;
+  margin: 0;
+  padding: 30px 80px 0 0;
 }
 
 .nav__link {
