--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -22,13 +22,15 @@
   padding-left: 80px;
   padding-bottom: 80px;
   max-width: 438px;
-  font-family: "Noto Serif", "Times New Roman" serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
 }
 
 .recipes__iframe {
   border: none;
+  width: 480px;
+  height: 273px;
 }
 
 .recipes__videos {
