my project first review updates

--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -22,7 +22,7 @@
   margin: 0 auto;
   text-align: center;
   padding-bottom: 100px;
-  font-family: "Noto Serif", "Times New Roman" serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
 }
