--- a/blocks/header.css
+++ b/blocks/header.css
@@ -25,7 +25,6 @@
   line-height: 72px;
   color: #2f80ed;
   display: block;
-  margin-bottom: 10px;
 }
 
 .header__description {
@@ -47,19 +46,20 @@
   z-index: 1;
 }
 
-.header__paragraph_type_hours {
-  list-style: none;
+.header__info {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
   position: absolute;
-  left: 80px;
-  bottom: 40px;
-  margin: 0;
-  padding: 0;
-  font-weight: 500;
 }
 
-.header__paragraph_type_address {
-  position: absolute;
-  right: 80px;
-  bottom: 40px;
+.header__info-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.header__paragraph {
   font-weight: 500;
+  margin: 0;
 }
