--- a/blocks/header.css
+++ b/blocks/header.css
@@ -46,14 +46,19 @@
   z-index: 1;
 }
 
-.header__info {
+.header__footer {
   display: flex;
   align-items: end;
   justify-content: space-between;
   position: absolute;
+  bottom: 40px;
+  margin: 0;
+  padding: 0 80px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
-.header__info-list {
+.header__footer-list {
   list-style: none;
   margin: 0;
   padding: 0;
